--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,14 +2,15 @@
   <div class="logo-container">
     <ion-img src="assets/images/logo.png" class="logo"></ion-img>
   </div>
-  <div class="form-container">
-      <ion-item class="custom-input">
-        <ion-input label="Text input" placeholder="Enter text"></ion-input>
-      </ion-item>
-      <ion-item class="custom-input">
-          <ion-input type="password" label="Text input" placeholder="Enter text"></ion-input>
-      </ion-item>
-      <ion-button class="custom-input" expand="full" (click)="goToPage('student_classes')">Iniciar Sesión</ion-button>
-  </div>
+  <form class="form-container">
+    <ion-item class="custom-input">
+      <ion-input id="username" label="Nombre de Usuario" placeholder="c.abarzua"></ion-input>
+    </ion-item>
+    <ion-item class="custom-input">
+      <ion-input id="password" type="password" label="Contraseña" placeholder="123456"></ion-input>
+    </ion-item>
+    <ion-button class="custom-input" expand="full" (click)="login()">Iniciar Sesión</ion-button>
+  </form>
+  
 </ion-content>
 
