--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Iniciar Sesion</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
   <div class="logo-container">
     <ion-img src="assets/images/logo.png" class="logo"></ion-img>
@@ -10,6 +16,10 @@
       <ion-input id="password" type="password" label="Contraseña" placeholder="123456"></ion-input>
     </ion-item>
     <ion-button class="custom-input" expand="full" (click)="login()">Iniciar Sesión</ion-button>
+    <div class="forgot-password">
+      <a href="/forgot-password" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
+    </div>
+    
   </form>
 </ion-content>
 
