--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,8 +11,31 @@
     margin-bottom: 15%; 
   }
   
-.custom-input {
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .custom-input {
     width: 75%;
     margin-left: auto;
     margin-right: auto;
-}
+  }
+  
+  .forgot-password {
+    display: flex;
+    justify-content: flex-end; /* Alinea a la derecha */
+    margin-top: 10px;
+    width: 75%; /* Establece el ancho para que coincida con los demás elementos */
+  }
+  
+  .forgot-password-link {
+    color: #007bff;
+    text-decoration: underline;
+  }
+  
+  .forgot-password-link:hover {
+    color: #0056b3;
+    text-decoration: underline;
+  }
