--- a/src/app/student-class/student-class.page.html
+++ b/src/app/student-class/student-class.page.html
@@ -45,7 +45,7 @@
   </ion-card>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="goToPage('')">
+    <ion-fab-button (click)="goToPage('/qr-reader')">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
