Se agrego dos value en el login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,10 +10,10 @@
   </div>
   <form class="form-container">
     <ion-item class="custom-input">
-      <ion-input id="username" label="Nombre de Usuario" placeholder="c.abarzua"></ion-input>
+      <ion-input id="username" label="Nombre de Usuario" placeholder="c.abarzua" value="g.flores@duocuc.cl"></ion-input>
     </ion-item>
     <ion-item class="custom-input">
-      <ion-input id="password" type="password" label="Contraseña" placeholder="123456"></ion-input>
+      <ion-input id="password" type="password" label="Contraseña" placeholder="123456" value="123456"></ion-input>
     </ion-item>
     <ion-button class="custom-input" expand="full" (click)="login()">Iniciar Sesión</ion-button>
     <div class="forgot-password">
