--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,24 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Iniciar Sesion</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <div class="logo-container">
-    <ion-img src="assets/images/logo.png" class="logo"></ion-img>
+
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <img class="mx-auto h-10 w-auto" src="assets/images/logo.png" alt="Your Company">
   </div>
-  <form class="form-container">
-    <ion-item class="custom-input">
-      <ion-input id="username" label="Nombre de Usuario" placeholder="c.abarzua" value="g.flores@duocuc.cl"></ion-input>
-    </ion-item>
-    <ion-item class="custom-input">
-      <ion-input id="password" type="password" label="Contraseña" placeholder="123456" value="123456"></ion-input>
-    </ion-item>
-    <ion-button class="custom-input" expand="full" (click)="login()">Iniciar Sesión</ion-button>
-    <div class="forgot-password">
-      <a [routerLink]="['/forgot-password']" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
-    </div>
-    
-  </form>
+
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form class="space-y-6">
+      <div>
+        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo Electronico</label>
+        <div class="mt-2">
+          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Contraseña</label>
+          <div class="text-sm">
+            <a [routerLink]="['/forgot-password']" class="font-semibold text-indigo-600 hover:text-indigo-500">¿Olvidaste tu Contraseña?</a>
+          </div>
+        </div>
+        <div class="mt-2">
+          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <button class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" expand="full" (click)="login()">Iniciar Sesión</button>
+      </div>
+    </form>
+  </div>
+</div>
+
 </ion-content>
