--- a/src/app/pages/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password/forgot-password.page.html
@@ -8,13 +8,26 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="logo-container">
-    <ion-img src="assets/images/logo.png" class="logo"></ion-img>
+
+  <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <img class="mx-auto h-10 w-auto" src="assets/images/logo.png" alt="Your Company">
+    </div>
+  
+    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+      <form class="space-y-6">
+        <div>
+          <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo Electronico</label>
+          <div class="mt-2">
+            <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          </div>
+        </div>
+  
+        <div>
+          <button class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" expand="full" (click)="sendResetPasswordRequest()">Enviar Solicitud</button>
+        </div>
+      </form>
+    </div>
   </div>
-  <form class="form-container">
-    <ion-item class="custom-input">
-      <ion-input id="email" label="Correo Electrónico" placeholder="correo@example.com"></ion-input>
-    </ion-item>
-    <ion-button class="custom-input" expand="full" (click)="sendResetPasswordRequest()">Enviar Correo</ion-button>
-  </form>
-</ion-content>
+  
+  </ion-content>
